<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Allen\'s Notes App</string>
    <string name="action_about">About</string>
    <string name="btn_sortMethods">Sorting Method</string>
    <string name="btn_newNotes">New Note</string>

    <string-array name="sorting">
        <item>Alphabetical (ASC)</item>
        <item>Alphabetical (DESC)</item>
        <item>Date and Time (ASC)</item>
        <item>Date and Time (DESC)</item>
    </string-array>

    <string name="action_sorting">Sorting Method</string>
    <string name="action_quit">Quit</string>
    <string name="title_activity_new_note">Discard and Return</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_title">Note Title</string>
    <string name="hint_content">Note Content</string>
    <string name="btn_save">Save Note</string>
    <string name="title_activity_edit_note">Save and Return</string>
    <string name="btn_delete">Delete Note</string>
    <string name="date">date placeholder</string>
    <string name="deleteall">Delete All Notes</string>

</resources>
